@@ -26,8 +26,11 @@
  ***************************************************************************/
 
 /* we use strndup */
+#if !defined _GNU_SOURCE
 #define _GNU_SOURCE
+#endif /* !defined _GNU_SOURCE */
 
+#include <eixTk/stringutils.h> /* to get strndup on macos */
 #include "basicversion.h"
 
 #include <eixTk/regexp.h>
