@@ -5,6 +5,8 @@
 	  leonie for bringing this to my attention.
 	- Added PROVIDE; bumped db-version
 	- Fixing http://bugs.gentoo.org/show_bug.cgi?id=111927
+	- Added our own strndup-implementation that will be used for ppc-macos
+	  See http://bugs.gentoo.org/show_bug.cgi?id=111912
 
 *eix-0.5_beta
 
